tests/baselines/reference/tsxErrorRecovery1.errors.txt
tests/cases/conformance/jsx/tsxErrorRecovery1.tsx(5,19): error TS1109: Expression expected.


==== tests/cases/conformance/jsx/tsxErrorRecovery1.tsx (1 errors) ====
    
    declare namespace JSX { interface Element { } }
    
    function foo() {
    	var x = <div>  { </div>
    	                 ~~
!!! error TS1109: Expression expected.
    }
    // Shouldn't see any errors down here
    var y = { a: 1 };
    